# mysql-operator

./: .codecov.yaml  .gitignore  .jujuignore  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  index.html  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  snap_revisions.json  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS  renovate.json  renovate.json5
1/: index.html
10/: index.html
11/: index.html
13/: index.html
14/: index.html
15/: index.html
18/: index.html
20/: index.html
21/: index.html
2125/: index.html
2126/: index.html
2127/: index.html
2139/: index.html
2144/: index.html
2149/: index.html
2154/: index.html
2159/: index.html
2160/: index.html
2164/: index.html
2167/: index.html
2168/: index.html
2169/: index.html
2174/: index.html
2179/: index.html
2180/: index.html
2181/: index.html
2188/: index.html
2192/: index.html
2198/: index.html
2199/: index.html
22/: index.html
2200/: index.html
2201/: index.html
2202/: index.html
2210/: index.html
2211/: index.html
tests/integration/: backups.py  conftest.py  connector.py  helpers.py  helpers_ha.py  integration_constants.py  juju_.py  markers.py  pyproject.toml  read_charm_yaml.py  test_architecture.py  test_backup_aws.py  test_backup_ceph.py  test_backup_gcp.py  test_backup_pitr.py  test_backup_pitr_gcp.py  test_backups.py  test_charm.py  test_database.py  test_db_router.py  test_ha.py  test_healing.py  test_log_rotation.py  test_mariadb.py  test_predefined_dba_role.py  test_predefined_roles.py  test_relation_mysql_legacy.py  test_saturate_max_connections.py  test_shared_db.py  test_subordinate_charms.py  test_tls.py  test_vm_reboot.py
tests/integration/application-charm/: charmcraft.yaml  metadata.yaml
tests/integration/application-charm/src/: charm.py  connector.py
tests/integration/high_availability/: conftest.py  high_availability_helpers.py  high_availability_helpers_new.py  test_async_replication.py  test_async_replication_new.py  test_async_replication_upgrade.py  test_primary_switchover.py  test_replication.py  test_replication_3.py  test_replication_4.py  test_replication_6.py  test_replication_data_consistency.py  test_replication_data_consistency_new.py  test_replication_data_isolation_new.py  test_replication_logs_rotation.py  test_replication_logs_rotation_new.py  test_replication_reelection.py  test_replication_reelection_new.py  test_replication_scaling.py  test_replication_scaling_new.py  test_replication_unit_endpoints.py  test_replication_unit_endpoints_new.py  test_replication_variables.py  test_replication_variables_new.py  test_self_healing.py  test_self_healing_7.py  test_self_healing_network_cut.py  test_self_healing_network_cut_new.py  test_self_healing_process_frozen.py  test_self_healing_process_frozen_new.py  test_self_healing_process_killed.py  test_self_healing_process_killed_new.py  test_self_healing_restart_forceful.py  test_self_healing_restart_forceful_new.py  test_self_healing_restart_graceful.py  test_self_healing_restart_graceful_new.py  test_self_healing_stop_all.py  test_self_healing_stop_all_new.py  test_self_healing_stop_primary.py  test_self_healing_stop_primary_new.py  (+8 more)
tests/integration/high_availability/application_charm/: charmcraft.yaml
tests/integration/high_availability/application_charm/lib/charms/data_platform_libs/v0/: data_interfaces.py
tests/integration/high_availability/application_charm/src/: charm.py  continuous_writes.py
tests/integration/integration/: backups.py  backups_ha.py  helpers_backups.py  test_architecture.py  test_architecture_new.py  test_backup_aws.py  test_backup_aws_new.py  test_backup_ceph.py  test_backup_ceph_new.py  test_backup_gcp.py  test_backup_gcp_new.py  test_backup_pitr_aws.py  test_backup_pitr_aws_new.py  test_backup_pitr_gcp.py  test_backup_pitr_gcp_new.py  test_saturate_max_connections.py  test_saturate_max_connections_new.py  test_subordinate_charms.py  test_subordinate_charms_new.py  test_tls.py  test_tls_new.py  test_vm_reboot.py  test_vm_reboot_new.py
tests/integration/integration/high_availability/: conftest.py  high_availability_helpers.py  high_availability_helpers_new.py  test_async_replication.py  test_async_replication_upgrade.py  test_primary_switchover.py  test_replication_data_consistency.py  test_replication_data_isolation.py  test_replication_logs_rotation.py  test_replication_reelection.py  test_replication_scaling.py  test_replication_unit_endpoints.py  test_replication_variables.py  test_self_healing_network_cut.py  test_self_healing_process_frozen.py  test_self_healing_process_killed.py  test_self_healing_restart_forceful.py  test_self_healing_restart_graceful.py  test_self_healing_stop_all.py  test_self_healing_stop_primary.py  test_upgrade.py  test_upgrade_rollback_incompat.py  test_upgrade_skip_pre_upgrade_check.py
tests/integration/integration/high_availability/scripts/: clean-data-dir.sh
tests/integration/integration/relations/: test_database.py  test_database_new.py  test_db_router.py  test_db_router_new.py  test_relation_mysql_legacy.py  test_relation_mysql_legacy_new.py  test_shared_db.py  test_shared_db_new.py
tests/integration/integration/roles/: test_database_dba_role.py  test_database_dba_role_new.py  test_instance_dba_role.py  test_instance_dba_role_new.py  test_instance_roles.py  test_instance_roles_new.py
tests/integration/integration/spaces/: conftest.py  test_spaced_db.py  test_spaced_db_new.py
tests/integration/relations/: test_database.py  test_db_router.py  test_relation_mysql_legacy.py  test_shared_db.py
tests/integration/relations/application-charm/: actions.yaml  charmcraft.yaml
tests/integration/relations/application-charm/src/: charm.py  connector.py
tests/integration/release/high_availability/: conftest.py  high_availability_helpers.py  test_upgrade_from_stable.py
tests/integration/roles/: test_database_dba_role.py  test_instance_dba_role.py  test_instance_roles.py
tests/integration/spaces/: conftest.py  test_spaced_db.py
(+138814 files in other folders)
